# cuda

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
.obsidian/: workspace.json
examples/phase1/: benchmarking.cu  cuda_error_handling.cu  cuda_example_utils.cuh  env_verify.cu  hello_cuda.cu  matmul_naive.cu  matmul_tiled.cu  matrix_add.cu  vector_add.cu
examples/phase2/: broadcasting.cpp  cuda_utility_layer.cpp  gpu_memory_manager.cu  tensor_add.cu  tensor_allocation.cu  tensor_binary_ops.cu  tensor_matmul.cu  tensor_metadata.cpp
examples/phase3/: activation_ops.cu  conv2d_ops.cu  linear_ops.cu  loss_ops.cu  pooling_ops.cu
examples/phase4/: autograd_elementwise.cu  autograd_topo.cu
examples/phase5/: optimizer_test.cu
examples/phase6/: train_cnn.cu
examples/phase7/: benchmark_suite.cu
graphify-out/: .CudaEvent().md  .CudaException().md  .DeviceBuffer().md  .DeviceTensor().md  .Tensor().md  .TensorShape().md  .bytes().md  .bytes()_1.md  .bytes()_2.md  .checked_multiply().md  .checked_size_bytes().md  .checked_size_bytes()_1.md  .compute_metadata().md  .copy_from_host().md  .copy_from_host()_1.md  .copy_to_host().md  .copy_to_host()_1.md  .data().md  .description().md  .dimension().md  .dtype().md  .dtype()_1.md  .element_count().md  .element_count()_1.md  .element_count()_2.md  .empty().md  .error().md  .format_message().md  .get().md  .get()_1.md  .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  .graphify_obsidian_manifest.json  .graphify_python  .is_scalar().md  .line().md  .rank().md  .rank()_1.md  .rank()_2.md  (+157 more)
graphify-out/.obsidian/: graph.json  workspace.json
graphify-out/2026-07-06/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
include/cuda_dl/core/: autograd.hpp  cuda_error.cuh  cuda_event_timer.cuh  dataloader.hpp  dataset.hpp  device_buffer.cuh  device_tensor.cuh  launch_config.cuh  optimizer.hpp  tensor.hpp
include/cuda_dl/ops/: activations.cuh  conv2d.cuh  linear.cuh  loss.cuh  optimizers.cuh  pooling.cuh  tensor_ops.cuh
scripts/: activate-msvc.ps1  download_mnist.py
